testsuite/tests/linear/should_fail/all.T
test('TypeClass', normal, compile_fail, [''])
test('Linear11', normal, compile_fail, [''])
test('Linear13', normal, compile_fail, [''])
test('Linear17', normal, compile_fail, [''])
test('Linear1', normal, compile_fail, [''])
test('Linear2', normal, compile_fail, [''])
test('Linear5', normal, compile_fail, [''])
test('Linear7', normal, compile_fail, [''])
test('Linear9', normal, compile_fail, [''])
test('LinearNoExt', normal, compile_fail, [''])
test('LinearNoExtU', normal, compile_fail, [''])
test('LinearAsPat', normal, compile_fail, [''])
test('LinearLazyPat', normal, compile_fail, [''])
test('LinearRecordUpdate', normal, compile_fail, [''])
test('LinearSeq', normal, compile_fail, [''])
test('LinearViewPattern', normal, compile_fail, [''])
test('LinearConfusedDollar', normal, compile_fail, [''])
test('LinearPatSyn', normal, compile_fail, [''])
test('LinearPatSyn2', normal, compile_fail, [''])
test('LinearRole', normal, compile_fail, [''])
test('LinearGADTNewtype', normal, compile_fail, [''])
test('LinearPartialSig', normal, compile_fail, [''])
test('LinearKind', normal, compile_fail, [''])
test('LinearKind2', normal, compile_fail, [''])
test('LinearKind3', normal, compile_fail, [''])
test('LinearVar', normal, compile_fail, ['-XLinearTypes'])
test('LinearErrOrigin', normal, compile_fail, ['-XLinearTypes'])
test('LinearPolyType', normal, compile_fail, [''])  # not supported yet (#19517)
test('LinearBottomMult', normal, compile_fail, [''])
test('LinearSequenceExpr', normal, compile_fail, [''])
test('LinearIf', normal, compile_fail, [''])
test('LinearPatternGuardWildcard', normal, compile_fail, [''])
test('LinearFFI', normal, compile_fail, [''])
test('LinearTHFail', normal, compile_fail, [''])
test('LinearTHFail2', normal, compile_fail, [''])
test('LinearTHFail3', normal, compile_fail, [''])
test('T18888', normal, compile_fail, [''])
test('T18888_datakinds', normal, compile_fail, [''])
test('T19120', normal, compile_fail, [''])
test('T20083', normal, compile_fail, ['-XLinearTypes'])
test('T19361', normal, compile_fail, [''])
test('T21278', normal, compile_fail, ['-XLinearTypes'])
test('T23814fail', normal, compile_fail, [''])
test('LinearLet1', normal, compile_fail, [''])
test('LinearLet2', normal, compile_fail, [''])
test('LinearLet3', normal, compile_fail, [''])
test('LinearLet4', normal, compile_fail, [''])
test('LinearLet5', normal, compile_fail, [''])
test('LinearLet6', normal, compile_fail, [''])
test('LinearLet7', normal, compile_fail, [''])
test('LinearLet8', normal, compile_fail, [''])
test('LinearLet9', normal, compile_fail, [''])
test('LinearLet10', normal, compile_fail, [''])
test('T25081', normal, compile_fail, [''])
